[package]
name = "gorbagana-bench-tps"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
csv = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

gorbagana-account = { workspace = true }
gorbagana-clap-utils = { workspace = true }
gorbagana-cli-config = { workspace = true }
gorbagana-client = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-commitment-config = { workspace = true }
gorbagana-compute-budget-interface = { workspace = true }
gorbagana-connection-cache = { workspace = true }
gorbagana-core = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-faucet = { workspace = true }
gorbagana-fee-calculator = { workspace = true }
gorbagana-genesis = { workspace = true }
gorbagana-genesis-config = { workspace = true }
gorbagana-gossip = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-instruction = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-logger = "=2.3.1"
gorbagana-measure = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-metrics = { workspace = true }
gorbagana-native-token = { workspace = true }
gorbagana-net-utils = { workspace = true }
gorbagana-nonce = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-quic-client = { workspace = true }
gorbagana-rpc = { workspace = true }
gorbagana-rpc-client = { workspace = true }
gorbagana-rpc-client-api = { workspace = true }
gorbagana-rpc-client-nonce-utils = { workspace = true }
gorbagana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-signature = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-streamer = { workspace = true }
gorbagana-system-interface = { workspace = true }
gorbagana-time-utils = { workspace = true }
gorbagana-tps-client = { workspace = true }
gorbagana-tpu-client = { workspace = true }
gorbagana-transaction = { workspace = true }
gorbagana-transaction-status = { workspace = true }
gorbagana-version = { workspace = true }
spl-instruction-padding = { version = "=0.3.0", features = ["no-entrypoint"] }
thiserror = { workspace = true }

[dev-dependencies]
agave-feature-set = { workspace = true }
serial_test = { workspace = true }
gorbagana-local-cluster = { workspace = true }
gorbagana-rent = { workspace = true }
gorbagana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-sdk-ids = { workspace = true }
gorbagana-test-validator = { workspace = true }
gorbagana-tps-client = { workspace = true, features = ["bank-client"] }
tempfile = { workspace = true }
