[package]
name = "gorbagana-bench-vote"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
gorbagana-clap-utils = { workspace = true }
gorbagana-client = { workspace = true }
gorbagana-connection-cache = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-logger = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-net-utils = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-streamer = { workspace = true }
gorbagana-transaction = { workspace = true }
gorbagana-version = { workspace = true }
gorbagana-vote-program = { workspace = true }
