[package]
name = "gorbagana-bloom"
description = "Gorbagana bloom filter"
documentation = "https://docs.rs/gorbagana-bloom"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "gorbagana_bloom"

[features]
frozen-abi = [
    "dep:gorbagana-frozen-abi",
    "dep:gorbagana-frozen-abi-macro",
    "gorbagana-hash/frozen-abi",
]

[dependencies]
bv = { workspace = true, features = ["serde"] }
fnv = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
gorbagana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
gorbagana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
gorbagana-sanitize = { workspace = true }
gorbagana-time-utils = { workspace = true }

[dev-dependencies]
rayon = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-sha256-hasher = { workspace = true }
gorbagana-signature = { workspace = true, features = ["std"] }

[lints]
workspace = true
