[package]
name = "gorbagana-bucket-map"
description = "gorbagana-bucket-map"
documentation = "https://docs.rs/gorbagana-bucket-map"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["lib"]
name = "gorbagana_bucket_map"

[dependencies]
bv = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-measure = { workspace = true }
gorbagana-pubkey = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
rayon = { workspace = true }
gorbagana-logger = { workspace = true }
gorbagana-pubkey = { workspace = true, features = ["rand"] }

[[bench]]
name = "bucket_map"
