[package]
name = "gorbagana-builtins-default-costs"
description = "Gorbagana builtins default costs"
documentation = "https://docs.rs/gorbagana-builtins-default-costs"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
# Add additional builtin programs here

[lib]
crate-type = ["lib"]
name = "gorbagana_builtins_default_costs"

[features]
frozen-abi = ["dep:gorbagana-frozen-abi", "gorbagana-vote-program/frozen-abi"]
dev-context-only-utils = []

[dependencies]
agave-feature-set = { workspace = true }
ahash = { workspace = true }
log = { workspace = true }
gorbagana-bpf-loader-program = { workspace = true }
gorbagana-compute-budget-program = { workspace = true }
gorbagana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
gorbagana-loader-v4-program = { workspace = true, features = ["agave-unstable-api"] }
gorbagana-pubkey = { workspace = true }
gorbagana-sdk-ids = { workspace = true }
gorbagana-stake-program = { workspace = true }
gorbagana-system-program = { workspace = true }
gorbagana-vote-program = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
static_assertions = { workspace = true }

[lints]
workspace = true
