[package]
name = "gorbagana-builtins"
description = "Gorbagana builtin programs"
documentation = "https://docs.rs/gorbagana-builtins"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
dev-context-only-utils = []

[dependencies]
agave-feature-set = { workspace = true }
gorbagana-bpf-loader-program = { workspace = true }
gorbagana-compute-budget-program = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-loader-v4-program = { workspace = true }
gorbagana-program-runtime = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-sdk-ids = { workspace = true }
gorbagana-stake-program = { workspace = true }
gorbagana-system-program = { workspace = true }
gorbagana-vote-program = { workspace = true }
gorbagana-zk-elgamal-proof-program = { workspace = true }
gorbagana-zk-token-proof-program = { workspace = true }

[lints]
workspace = true
