[package]
name = "agave-cargo-registry"
description = "Gorbagana cargo registry"
documentation = "https://docs.rs/agave-cargo-registry"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []

[dependencies]
clap = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true, features = ["full"] }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
gorbagana-clap-utils = { workspace = true }
gorbagana-cli = { workspace = true }
gorbagana-cli-config = { workspace = true }
gorbagana-cli-output = { workspace = true }
gorbagana-commitment-config = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-logger = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-remote-wallet = { workspace = true, features = ["default"] }
gorbagana-rpc-client = { workspace = true, features = ["default"] }
gorbagana-rpc-client-api = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-version = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[dev-dependencies]
