[package]
name = "gorbagana-clap-utils"
description = "Gorbagana utilities for the clap"
documentation = "https://docs.rs/gorbagana-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "gorbagana_clap_utils"

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = "2.33.0"
rpassword = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-cluster-type = { workspace = true }
gorbagana-commitment-config = { workspace = true }
gorbagana-derivation-path = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-keypair = { workspace = true, features = ["seed-derivable"] }
gorbagana-message = { workspace = true }
gorbagana-native-token = { workspace = true }
gorbagana-presigner = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-remote-wallet = { workspace = true, features = ["default"] }
gorbagana-seed-phrase = { workspace = true }
gorbagana-signature = { workspace = true }
gorbagana-signer = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
gorbagana-pubkey = { workspace = true, features = ["rand"] }
gorbagana-system-interface = { workspace = true, features = ["bincode"] }
tempfile = { workspace = true }
