[package]
name = "gorbagana-clap-v3-utils"
description = "Gorbagana utilities for the clap v3"
documentation = "https://docs.rs/gorbagana-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "gorbagana_clap_v3_utils"

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = { version = "3.2.23", features = ["cargo"] }
rpassword = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-cluster-type = { workspace = true }
gorbagana-commitment-config = { workspace = true }
gorbagana-derivation-path = { workspace = true }
# the borsh feature is required to use the value_parser macro
gorbagana-hash = { workspace = true, features = ["borsh"] }
gorbagana-keypair = { workspace = true, features = ["seed-derivable"] }
gorbagana-message = { workspace = true }
gorbagana-native-token = { workspace = true }
gorbagana-presigner = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-remote-wallet = { workspace = true, features = ["default"] }
gorbagana-seed-derivable = { workspace = true }
gorbagana-seed-phrase = { workspace = true }
gorbagana-signature = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-zk-token-sdk = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
gorbagana-pubkey = { workspace = true, features = ["rand"] }
gorbagana-system-interface = { workspace = true, features = ["bincode"] }
tempfile = { workspace = true }
