[package]
name = "gorbagana-cli-output"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/gorbagana-cli-output"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
Inflector = { workspace = true }
agave-reserved-account-keys = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
clap = "2.33.0"
console = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
pretty-hex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gorbagana-account = { workspace = true }
gorbagana-account-decoder = { workspace = true }
gorbagana-bincode = { workspace = true }
gorbagana-clap-utils = { workspace = true }
gorbagana-cli-config = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-epoch-info = { workspace = true, features = ["serde"] }
gorbagana-hash = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-native-token = { workspace = true }
gorbagana-packet = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-rpc-client-api = { workspace = true }
gorbagana-sdk-ids = { workspace = true }
gorbagana-signature = { workspace = true }
gorbagana-stake-interface = { workspace = true }
gorbagana-system-interface = { workspace = true }
gorbagana-sysvar = { workspace = true }
gorbagana-transaction = { workspace = true, features = ["verify"] }
gorbagana-transaction-error = { workspace = true }
gorbagana-transaction-status = { workspace = true }
gorbagana-vote-program = { workspace = true }
spl-memo = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-transaction-context = { workspace = true }
