[package]
name = "gorbagana-cli"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/gorbagana-cli"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "gorbagana"
path = "src/main.rs"

[dependencies]
agave-feature-set = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
const_format = { workspace = true }
criterion-stats = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pretty-hex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
gorbagana-account = "=2.2.1"
gorbagana-account-decoder = { workspace = true }
gorbagana-address-lookup-table-interface = { workspace = true }
gorbagana-borsh = "=2.2.1"
gorbagana-bpf-loader-program = { workspace = true }
gorbagana-clap-utils = { workspace = true }
gorbagana-cli-config = { workspace = true }
gorbagana-cli-output = { workspace = true }
gorbagana-client = { workspace = true }
gorbagana-clock = "=2.2.2"
gorbagana-cluster-type = "=2.2.1"
gorbagana-commitment-config = "=2.2.1"
gorbagana-compute-budget-interface = { version = "=2.2.2", features = ["borsh"] }
gorbagana-config-interface = "=1.0.0"
gorbagana-config-program-client = { workspace = true, features = ["serde"] }
gorbagana-connection-cache = { workspace = true }
gorbagana-epoch-schedule = "=2.2.1"
gorbagana-feature-gate-client = "=0.0.2"
gorbagana-feature-gate-interface = "=2.2.2"
gorbagana-fee-calculator = "=2.2.1"
gorbagana-fee-structure = "=2.3.0"
gorbagana-hash = "=2.3.0"
gorbagana-instruction = "=2.3.0"
gorbagana-keypair = "=2.2.1"
gorbagana-loader-v3-interface = { version = "=5.0.0", features = ["bincode"] }
gorbagana-loader-v4-interface = "=2.2.1"
gorbagana-loader-v4-program = { workspace = true }
gorbagana-logger = "=2.3.1"
gorbagana-message = "=2.4.0"
gorbagana-native-token = "=2.2.2"
gorbagana-nonce = "=2.2.1"
gorbagana-offchain-message = { version = "=2.2.1", features = ["verify"] }
gorbagana-packet = "=2.2.1"
gorbagana-program-runtime = { workspace = true }
gorbagana-pubkey = { version = "=2.4.0", default-features = false }
gorbagana-pubsub-client = { workspace = true }
gorbagana-quic-client = { workspace = true }
gorbagana-remote-wallet = { workspace = true, features = ["default"] }
gorbagana-rent = "=2.2.1"
gorbagana-rpc-client = { workspace = true, features = ["default"] }
gorbagana-rpc-client-api = { workspace = true }
gorbagana-rpc-client-nonce-utils = { workspace = true, features = ["clap"] }
gorbagana-sbpf = { workspace = true }
gorbagana-sdk-ids = "=2.2.1"
gorbagana-signature = { version = "=2.3.0", default-features = false }
gorbagana-signer = "=2.2.1"
gorbagana-slot-history = "=2.2.1"
gorbagana-stake-interface = "=1.2.1"
gorbagana-streamer = { workspace = true }
gorbagana-system-interface = { version = "=1.0", features = ["bincode"] }
gorbagana-sysvar = "=2.2.2"
gorbagana-tps-client = { workspace = true }
gorbagana-tpu-client = { workspace = true, features = ["default"] }
gorbagana-transaction = "=2.2.3"
gorbagana-transaction-error = "=2.2.1"
gorbagana-transaction-status = { workspace = true }
gorbagana-udp-client = { workspace = true }
gorbagana-version = { workspace = true }
gorbagana-vote-program = { workspace = true }
spl-memo = { version = "=6.0.0", features = ["no-entrypoint"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
gorbagana-faucet = { workspace = true }
gorbagana-nonce-account = { workspace = true }
gorbagana-presigner = { workspace = true }
gorbagana-rpc = { workspace = true }
gorbagana-sha256-hasher = { workspace = true }
gorbagana-streamer = { workspace = true }
gorbagana-test-validator = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
