[package]
name = "gorbagana-client-test"
description = "Gorbagana RPC Test"
documentation = "https://docs.rs/gorbagana-client-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures-util = { workspace = true }
serde_json = { workspace = true }
gorbagana-client = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-commitment-config = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-ledger = { workspace = true }
gorbagana-measure = { workspace = true }
gorbagana-merkle-tree = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-native-token = { workspace = true }
gorbagana-perf = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-pubsub-client = { workspace = true }
gorbagana-rayon-threadlimit = { workspace = true }
gorbagana-rpc = { workspace = true }
gorbagana-rpc-client = { workspace = true }
gorbagana-rpc-client-api = { workspace = true }
gorbagana-runtime = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-streamer = { workspace = true }
gorbagana-system-interface = { workspace = true }
gorbagana-system-transaction = { workspace = true }
gorbagana-test-validator = { workspace = true }
gorbagana-transaction-status = { workspace = true }
gorbagana-version = { workspace = true }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
gorbagana-logger = { workspace = true }
gorbagana-net-utils = { workspace = true }
gorbagana-rpc = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
