[package]
name = "gorbagana-client"
description = "Gorbagana Client"
documentation = "https://docs.rs/gorbagana-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
gorbagana-account = { workspace = true }
gorbagana-client-traits = { workspace = true }
gorbagana-commitment-config = { workspace = true }
gorbagana-connection-cache = { workspace = true }
gorbagana-epoch-info = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-instruction = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-measure = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-pubsub-client = { workspace = true }
gorbagana-quic-client = { workspace = true }
gorbagana-quic-definitions = { workspace = true }
gorbagana-rpc-client = { workspace = true, features = ["default"] }
gorbagana-rpc-client-api = { workspace = true }
gorbagana-rpc-client-nonce-utils = { workspace = true }
gorbagana-signature = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-streamer = { workspace = true }
gorbagana-thin-client = { workspace = true }
gorbagana-time-utils = { workspace = true }
gorbagana-tpu-client = { workspace = true, features = ["default"] }
gorbagana-transaction = { workspace = true }
gorbagana-transaction-error = { workspace = true }
gorbagana-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }
gorbagana-net-utils = { workspace = true, features = ["dev-context-only-utils"] }
