[package]
name = "gorbagana-compute-budget-instruction"
description = "Gorbagana Compute Budget Instruction"
documentation = "https://docs.rs/gorbagana-compute-budget-instruction"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "gorbagana_compute_budget_instruction"

[features]
dev-context-only-utils = []

[dependencies]
agave-feature-set = { workspace = true }
log = { workspace = true }
gorbagana-borsh = { workspace = true }
gorbagana-builtins-default-costs = { workspace = true }
gorbagana-compute-budget = { workspace = true }
gorbagana-compute-budget-interface = { workspace = true, features = ["borsh"] }
gorbagana-instruction = { workspace = true }
gorbagana-packet = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-sdk-ids = { workspace = true }
gorbagana-svm-transaction = { workspace = true }
gorbagana-transaction-error = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
gorbagana-builtins-default-costs = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-hash = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-stake-interface = { workspace = true }
gorbagana-system-interface = { workspace = true }
gorbagana-transaction = { workspace = true, features = ["blake3"] }

[[bench]]
name = "process_compute_budget_instructions"
harness = false

[lints]
workspace = true
