[package]
name = "gorbagana-compute-budget"
description = "Gorbagana compute budget"
documentation = "https://docs.rs/gorbagana-compute-budget"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
dev-context-only-utils = ["dep:qualifier_attr"]
frozen-abi = ["dep:gorbagana-frozen-abi", "gorbagana-fee-structure/frozen-abi"]

[dependencies]
qualifier_attr = { workspace = true, optional = true }
gorbagana-fee-structure = { workspace = true }
gorbagana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
gorbagana-program-runtime = { workspace = true }

[lints]
workspace = true
