[package]
name = "gorbagana-connection-cache"
description = "Gorbagana Connection Cache"
documentation = "https://docs.rs/gorbagana-connection-cache"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-measure = { workspace = true }
gorbagana-metrics = { workspace = true }
gorbagana-time-utils = { workspace = true }
gorbagana-transaction-error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
rand_chacha = { workspace = true }
gorbagana-logger = { workspace = true }
gorbagana-net-utils = { workspace = true }
