[package]
name = "gorbagana-core"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/gorbagana-core"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = [
    "gorbagana-perf/dev-context-only-utils",
    "gorbagana-runtime/dev-context-only-utils",
    "gorbagana-streamer/dev-context-only-utils",
]
frozen-abi = [
    "dep:gorbagana-frozen-abi",
    "dep:gorbagana-frozen-abi-macro",
    "gorbagana-accounts-db/frozen-abi",
    "gorbagana-bloom/frozen-abi",
    "gorbagana-compute-budget/frozen-abi",
    "gorbagana-cost-model/frozen-abi",
    "gorbagana-frozen-abi/frozen-abi",
    "gorbagana-gossip/frozen-abi",
    "gorbagana-ledger/frozen-abi",
    "gorbagana-packet/frozen-abi",
    "gorbagana-perf/frozen-abi",
    "gorbagana-program-runtime/frozen-abi",
    "gorbagana-runtime/frozen-abi",
    "gorbagana-short-vec/frozen-abi",
    "gorbagana-signature/frozen-abi",
    "gorbagana-svm/frozen-abi",
    "gorbagana-vote/frozen-abi",
    "gorbagana-vote-program/frozen-abi",
]

[dependencies]
agave-banking-stage-ingress-types = { workspace = true }
agave-feature-set = { workspace = true }
agave-transaction-view = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
arrayvec = { workspace = true }
assert_matches = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
conditional-mod = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
derive_more = { workspace = true }
etcd-client = { workspace = true, features = ["tls"] }
futures = { workspace = true }
histogram = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
min-max-heap = { workspace = true }
num_enum = { workspace = true }
prio-graph = { workspace = true }
qualifier_attr = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rolling-file = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
slab = { workspace = true }
gorbagana-account = { workspace = true }
gorbagana-accounts-db = { workspace = true }
gorbagana-address-lookup-table-interface = { workspace = true }
gorbagana-bincode = { workspace = true }
gorbagana-bloom = { workspace = true }
gorbagana-builtins-default-costs = { workspace = true }
gorbagana-client = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-compute-budget = { workspace = true }
gorbagana-compute-budget-instruction = { workspace = true }
gorbagana-compute-budget-interface = { workspace = true }
gorbagana-connection-cache = { workspace = true }
gorbagana-cost-model = { workspace = true }
gorbagana-entry = { workspace = true }
gorbagana-epoch-schedule = { workspace = true }
gorbagana-fee = { workspace = true }
gorbagana-fee-calculator = { workspace = true }
gorbagana-fee-structure = { workspace = true }
gorbagana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
gorbagana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
gorbagana-genesis-config = { workspace = true }
gorbagana-geyser-plugin-manager = { workspace = true }
gorbagana-gossip = { workspace = true }
gorbagana-hard-forks = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-instruction = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-ledger = { workspace = true }
gorbagana-loader-v3-interface = { workspace = true }
gorbagana-measure = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-metrics = { workspace = true }
gorbagana-native-token = { workspace = true }
gorbagana-net-utils = { workspace = true }
gorbagana-nonce = { workspace = true }
gorbagana-nonce-account = { workspace = true }
gorbagana-packet = { workspace = true }
gorbagana-perf = { workspace = true }
gorbagana-poh = { workspace = true }
gorbagana-poh-config = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-quic-client = { workspace = true }
gorbagana-quic-definitions = { workspace = true }
gorbagana-rayon-threadlimit = { workspace = true }
gorbagana-rent = { workspace = true }
gorbagana-rpc = { workspace = true }
gorbagana-rpc-client-api = { workspace = true }
gorbagana-runtime = { workspace = true }
gorbagana-runtime-transaction = { workspace = true }
gorbagana-sanitize = { workspace = true }
gorbagana-sdk-ids = { workspace = true }
gorbagana-send-transaction-service = { workspace = true }
gorbagana-sha256-hasher = { workspace = true }
gorbagana-short-vec = { workspace = true }
gorbagana-shred-version = { workspace = true }
gorbagana-signature = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-slot-hashes = { workspace = true }
gorbagana-slot-history = { workspace = true }
gorbagana-streamer = { workspace = true }
gorbagana-svm = { workspace = true }
gorbagana-svm-transaction = { workspace = true }
gorbagana-system-interface = { workspace = true }
gorbagana-system-transaction = { workspace = true }
gorbagana-sysvar = { workspace = true }
gorbagana-time-utils = { workspace = true }
gorbagana-timings = { workspace = true }
gorbagana-tls-utils = { workspace = true }
gorbagana-tpu-client = { workspace = true }
gorbagana-tpu-client-next = { workspace = true }
gorbagana-transaction = { workspace = true }
gorbagana-transaction-error = { workspace = true }
gorbagana-transaction-status = { workspace = true }
gorbagana-turbine = { workspace = true }
gorbagana-unified-scheduler-pool = { workspace = true }
gorbagana-validator-exit = { workspace = true }
gorbagana-version = { workspace = true }
gorbagana-vote = { workspace = true }
gorbagana-vote-program = { workspace = true }
gorbagana-wen-restart = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
sys-info = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
trees = { workspace = true }

[target.'cfg(not(any(target_env = "msvc", target_os = "freebsd")))'.dependencies]
jemallocator = { workspace = true }

[target."cfg(unix)".dependencies]
sysctl = { workspace = true }

[dev-dependencies]
agave-reserved-account-keys = { workspace = true }
criterion = { workspace = true }
fs_extra = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
gorbagana-account = { workspace = true, features = ["dev-context-only-utils"] }
# See order-crates-for-publishing.py for using this unusual `path = "."`
gorbagana-bpf-loader-program = { workspace = true }
gorbagana-compute-budget-interface = { workspace = true }
gorbagana-compute-budget-program = { workspace = true }
gorbagana-core = { path = ".", features = ["dev-context-only-utils"] }
gorbagana-cost-model = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-keypair = { workspace = true }
gorbagana-ledger = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-logger = { workspace = true }
gorbagana-net-utils = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-poh = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-program-runtime = { workspace = true, features = ["metrics"] }
gorbagana-rpc = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-stake-program = { workspace = true }
gorbagana-system-program = { workspace = true }
gorbagana-unified-scheduler-logic = { workspace = true }
gorbagana-unified-scheduler-pool = { workspace = true, features = [
    "dev-context-only-utils",
] }
gorbagana-vote = { workspace = true, features = ["dev-context-only-utils"] }
spl-memo = { workspace = true, features = ["no-entrypoint"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[badges]
codecov = { repository = "gorbagana-labs/gorbagana", branch = "master", service = "github" }

[[bench]]
name = "banking_stage"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "receive_and_buffer"
harness = false

[[bench]]
name = "scheduler"
harness = false

[lints]
workspace = true
