[package]
name = "gorbagana-cost-model"
description = "Gorbagana cost model"
documentation = "https://docs.rs/gorbagana-cost-model"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "gorbagana_cost_model"

[features]
dev-context-only-utils = [
    "dep:gorbagana-hash",
    "dep:gorbagana-message",
    "dep:gorbagana-signature",
    "dep:gorbagana-transaction",
    "gorbagana-compute-budget-interface/dev-context-only-utils",
]
frozen-abi = [
    "dep:gorbagana-frozen-abi",
    "dep:gorbagana-frozen-abi-macro",
    "gorbagana-compute-budget/frozen-abi",
    "gorbagana-pubkey/frozen-abi",
    "gorbagana-vote-program/frozen-abi",
]

[dependencies]
agave-feature-set = { workspace = true }
ahash = { workspace = true }
log = { workspace = true }
gorbagana-bincode = { workspace = true }
gorbagana-borsh = { workspace = true }
gorbagana-builtins-default-costs = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-compute-budget = { workspace = true }
gorbagana-compute-budget-instruction = { workspace = true }
gorbagana-compute-budget-interface = { workspace = true }
gorbagana-fee-structure = { workspace = true }
gorbagana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
gorbagana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
gorbagana-hash = { workspace = true, optional = true }
gorbagana-message = { workspace = true, optional = true }
gorbagana-metrics = { workspace = true }
gorbagana-packet = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-runtime-transaction = { workspace = true }
gorbagana-sdk-ids = { workspace = true }
gorbagana-signature = { workspace = true, optional = true }
gorbagana-svm-transaction = { workspace = true }
gorbagana-system-interface = { workspace = true }
gorbagana-transaction = { workspace = true, optional = true }
gorbagana-transaction-error = { workspace = true }
gorbagana-vote-program = { workspace = true }

[dev-dependencies]
agave-reserved-account-keys = { workspace = true }
itertools = { workspace = true }
rand = "0.8.5"
# See order-crates-for-publishing.py for using this unusual `path = "."`
gorbagana-compute-budget-instruction = { workspace = true, features = [
    "dev-context-only-utils",
] }
gorbagana-compute-budget-interface = { workspace = true }
gorbagana-compute-budget-program = { workspace = true }
gorbagana-cost-model = { path = ".", features = ["dev-context-only-utils"] }
gorbagana-instruction = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-logger = { workspace = true }
gorbagana-pubkey = { workspace = true, features = ["rand"] }
gorbagana-runtime-transaction = { workspace = true, features = [
    "dev-context-only-utils",
] }
gorbagana-signer = { workspace = true }
gorbagana-system-program = { workspace = true }
gorbagana-system-transaction = { workspace = true }
gorbagana-vote = { workspace = true }
static_assertions = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "cost_tracker"

[lints]
workspace = true
