[package]
name = "gorbagana-dos"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []

[dependencies]
bincode = { workspace = true }
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
gorbagana-bench-tps = { workspace = true }
gorbagana-client = { workspace = true }
gorbagana-connection-cache = { workspace = true }
gorbagana-core = { workspace = true }
gorbagana-faucet = { workspace = true }
gorbagana-gossip = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-instruction = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-logger = "=2.3.1"
gorbagana-measure = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-net-utils = { workspace = true }
gorbagana-perf = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-quic-client = { workspace = true }
gorbagana-rpc = { workspace = true }
gorbagana-rpc-client = { workspace = true }
gorbagana-signature = { workspace = true, features = ["rand"] }
gorbagana-signer = { workspace = true }
gorbagana-stake-interface = { workspace = true }
gorbagana-streamer = { workspace = true }
gorbagana-system-interface = { workspace = true }
gorbagana-time-utils = { workspace = true }
gorbagana-tps-client = { workspace = true }
gorbagana-tpu-client = { workspace = true }
gorbagana-transaction = { workspace = true }
gorbagana-version = { workspace = true }

[dev-dependencies]
gorbagana-core = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-local-cluster = { workspace = true }
gorbagana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
